Implement feedback: Add test for missing required query param
