# belgif-rest-problem-it/belgif-rest-problem-openapi-validation-spring-boot-3-it/src/main/java/io/github/belgif/rest/problem/ValidationController.java
@@ -5,10 +5,11 @@ import org.springframework.web.bind.annotation.RestController;
 
 import io.github.belgif.rest.problem.openapi.validation.sb3.api.MyFirstPathApi;
 import io.github.belgif.rest.problem.openapi.validation.sb3.api.MyHeaderPathApi;
+import io.github.belgif.rest.problem.openapi.validation.sb3.api.MyQueryPathApi;
 import io.github.belgif.rest.problem.openapi.validation.sb3.model.MyRequestBodySchema;
 
 @RestController
-public class ValidationController implements MyFirstPathApi, MyHeaderPathApi {
+public class ValidationController implements MyFirstPathApi, MyHeaderPathApi, MyQueryPathApi {
 
     @Override
     public ResponseEntity<String> myFirstGetOperation(String myParam) {
@@ -27,6 +28,11 @@ public class ValidationController implements MyFirstPathApi, MyHeaderPathApi {
 
     @Override
     public ResponseEntity<String> myHeaderGetOperation(String myHeader) {
+        return buildResponse();
+    }
+
+    @Override
+    public ResponseEntity<String> myQueryParamOperation(String myParam) {
         return buildResponse();
     }
 
